--- a/public_html/layouts/basic/styles/Main.css
+++ b/public_html/layouts/basic/styles/Main.css
@@ -16118,308 +16118,310 @@ ul.tweets li {
 .u-align-middle-children * {
   vertical-align: middle !important; }
 
-.u-before-block:before {
+.u-table-column__before-block--inventory {
+  width: 1%; }
+.u-table-column__before-block:before {
   content: '';
   display: block; }
 
-.u-table-column-vw-1:before {
+.u-table-column__vw-1:before {
   width: 1vw; }
 
-.u-table-column-vw-2:before {
+.u-table-column__vw-2:before {
   width: 2vw; }
 
-.u-table-column-vw-3:before {
+.u-table-column__vw-3:before {
   width: 3vw; }
 
-.u-table-column-vw-4:before {
+.u-table-column__vw-4:before {
   width: 4vw; }
 
-.u-table-column-vw-5:before {
+.u-table-column__vw-5:before {
   width: 5vw; }
 
-.u-table-column-vw-6:before {
+.u-table-column__vw-6:before {
   width: 6vw; }
 
-.u-table-column-vw-7:before {
+.u-table-column__vw-7:before {
   width: 7vw; }
 
-.u-table-column-vw-8:before {
+.u-table-column__vw-8:before {
   width: 8vw; }
 
-.u-table-column-vw-9:before {
+.u-table-column__vw-9:before {
   width: 9vw; }
 
-.u-table-column-vw-10:before {
+.u-table-column__vw-10:before {
   width: 10vw; }
 
-.u-table-column-vw-11:before {
+.u-table-column__vw-11:before {
   width: 11vw; }
 
-.u-table-column-vw-12:before {
+.u-table-column__vw-12:before {
   width: 12vw; }
 
-.u-table-column-vw-13:before {
+.u-table-column__vw-13:before {
   width: 13vw; }
 
-.u-table-column-vw-14:before {
+.u-table-column__vw-14:before {
   width: 14vw; }
 
-.u-table-column-vw-15:before {
+.u-table-column__vw-15:before {
   width: 15vw; }
 
-.u-table-column-vw-16:before {
+.u-table-column__vw-16:before {
   width: 16vw; }
 
-.u-table-column-vw-17:before {
+.u-table-column__vw-17:before {
   width: 17vw; }
 
-.u-table-column-vw-18:before {
+.u-table-column__vw-18:before {
   width: 18vw; }
 
-.u-table-column-vw-19:before {
+.u-table-column__vw-19:before {
   width: 19vw; }
 
-.u-table-column-vw-20:before {
+.u-table-column__vw-20:before {
   width: 20vw; }
 
-.u-table-column-vw-21:before {
+.u-table-column__vw-21:before {
   width: 21vw; }
 
-.u-table-column-vw-22:before {
+.u-table-column__vw-22:before {
   width: 22vw; }
 
-.u-table-column-vw-23:before {
+.u-table-column__vw-23:before {
   width: 23vw; }
 
-.u-table-column-vw-24:before {
+.u-table-column__vw-24:before {
   width: 24vw; }
 
-.u-table-column-vw-25:before {
+.u-table-column__vw-25:before {
   width: 25vw; }
 
-.u-table-column-vw-26:before {
+.u-table-column__vw-26:before {
   width: 26vw; }
 
-.u-table-column-vw-27:before {
+.u-table-column__vw-27:before {
   width: 27vw; }
 
-.u-table-column-vw-28:before {
+.u-table-column__vw-28:before {
   width: 28vw; }
 
-.u-table-column-vw-29:before {
+.u-table-column__vw-29:before {
   width: 29vw; }
 
-.u-table-column-vw-30:before {
+.u-table-column__vw-30:before {
   width: 30vw; }
 
-.u-table-column-vw-31:before {
+.u-table-column__vw-31:before {
   width: 31vw; }
 
-.u-table-column-vw-32:before {
+.u-table-column__vw-32:before {
   width: 32vw; }
 
-.u-table-column-vw-33:before {
+.u-table-column__vw-33:before {
   width: 33vw; }
 
-.u-table-column-vw-34:before {
+.u-table-column__vw-34:before {
   width: 34vw; }
 
-.u-table-column-vw-35:before {
+.u-table-column__vw-35:before {
   width: 35vw; }
 
-.u-table-column-vw-36:before {
+.u-table-column__vw-36:before {
   width: 36vw; }
 
-.u-table-column-vw-37:before {
+.u-table-column__vw-37:before {
   width: 37vw; }
 
-.u-table-column-vw-38:before {
+.u-table-column__vw-38:before {
   width: 38vw; }
 
-.u-table-column-vw-39:before {
+.u-table-column__vw-39:before {
   width: 39vw; }
 
-.u-table-column-vw-40:before {
+.u-table-column__vw-40:before {
   width: 40vw; }
 
-.u-table-column-vw-41:before {
+.u-table-column__vw-41:before {
   width: 41vw; }
 
-.u-table-column-vw-42:before {
+.u-table-column__vw-42:before {
   width: 42vw; }
 
-.u-table-column-vw-43:before {
+.u-table-column__vw-43:before {
   width: 43vw; }
 
-.u-table-column-vw-44:before {
+.u-table-column__vw-44:before {
   width: 44vw; }
 
-.u-table-column-vw-45:before {
+.u-table-column__vw-45:before {
   width: 45vw; }
 
-.u-table-column-vw-46:before {
+.u-table-column__vw-46:before {
   width: 46vw; }
 
-.u-table-column-vw-47:before {
+.u-table-column__vw-47:before {
   width: 47vw; }
 
-.u-table-column-vw-48:before {
+.u-table-column__vw-48:before {
   width: 48vw; }
 
-.u-table-column-vw-49:before {
+.u-table-column__vw-49:before {
   width: 49vw; }
 
-.u-table-column-vw-50:before {
+.u-table-column__vw-50:before {
   width: 50vw; }
 
-.u-table-column-vw-51:before {
+.u-table-column__vw-51:before {
   width: 51vw; }
 
-.u-table-column-vw-52:before {
+.u-table-column__vw-52:before {
   width: 52vw; }
 
-.u-table-column-vw-53:before {
+.u-table-column__vw-53:before {
   width: 53vw; }
 
-.u-table-column-vw-54:before {
+.u-table-column__vw-54:before {
   width: 54vw; }
 
-.u-table-column-vw-55:before {
+.u-table-column__vw-55:before {
   width: 55vw; }
 
-.u-table-column-vw-56:before {
+.u-table-column__vw-56:before {
   width: 56vw; }
 
-.u-table-column-vw-57:before {
+.u-table-column__vw-57:before {
   width: 57vw; }
 
-.u-table-column-vw-58:before {
+.u-table-column__vw-58:before {
   width: 58vw; }
 
-.u-table-column-vw-59:before {
+.u-table-column__vw-59:before {
   width: 59vw; }
 
-.u-table-column-vw-60:before {
+.u-table-column__vw-60:before {
   width: 60vw; }
 
-.u-table-column-vw-61:before {
+.u-table-column__vw-61:before {
   width: 61vw; }
 
-.u-table-column-vw-62:before {
+.u-table-column__vw-62:before {
   width: 62vw; }
 
-.u-table-column-vw-63:before {
+.u-table-column__vw-63:before {
   width: 63vw; }
 
-.u-table-column-vw-64:before {
+.u-table-column__vw-64:before {
   width: 64vw; }
 
-.u-table-column-vw-65:before {
+.u-table-column__vw-65:before {
   width: 65vw; }
 
-.u-table-column-vw-66:before {
+.u-table-column__vw-66:before {
   width: 66vw; }
 
-.u-table-column-vw-67:before {
+.u-table-column__vw-67:before {
   width: 67vw; }
 
-.u-table-column-vw-68:before {
+.u-table-column__vw-68:before {
   width: 68vw; }
 
-.u-table-column-vw-69:before {
+.u-table-column__vw-69:before {
   width: 69vw; }
 
-.u-table-column-vw-70:before {
+.u-table-column__vw-70:before {
   width: 70vw; }
 
-.u-table-column-vw-71:before {
+.u-table-column__vw-71:before {
   width: 71vw; }
 
-.u-table-column-vw-72:before {
+.u-table-column__vw-72:before {
   width: 72vw; }
 
-.u-table-column-vw-73:before {
+.u-table-column__vw-73:before {
   width: 73vw; }
 
-.u-table-column-vw-74:before {
+.u-table-column__vw-74:before {
   width: 74vw; }
 
-.u-table-column-vw-75:before {
+.u-table-column__vw-75:before {
   width: 75vw; }
 
-.u-table-column-vw-76:before {
+.u-table-column__vw-76:before {
   width: 76vw; }
 
-.u-table-column-vw-77:before {
+.u-table-column__vw-77:before {
   width: 77vw; }
 
-.u-table-column-vw-78:before {
+.u-table-column__vw-78:before {
   width: 78vw; }
 
-.u-table-column-vw-79:before {
+.u-table-column__vw-79:before {
   width: 79vw; }
 
-.u-table-column-vw-80:before {
+.u-table-column__vw-80:before {
   width: 80vw; }
 
-.u-table-column-vw-81:before {
+.u-table-column__vw-81:before {
   width: 81vw; }
 
-.u-table-column-vw-82:before {
+.u-table-column__vw-82:before {
   width: 82vw; }
 
-.u-table-column-vw-83:before {
+.u-table-column__vw-83:before {
   width: 83vw; }
 
-.u-table-column-vw-84:before {
+.u-table-column__vw-84:before {
   width: 84vw; }
 
-.u-table-column-vw-85:before {
+.u-table-column__vw-85:before {
   width: 85vw; }
 
-.u-table-column-vw-86:before {
+.u-table-column__vw-86:before {
   width: 86vw; }
 
-.u-table-column-vw-87:before {
+.u-table-column__vw-87:before {
   width: 87vw; }
 
-.u-table-column-vw-88:before {
+.u-table-column__vw-88:before {
   width: 88vw; }
 
-.u-table-column-vw-89:before {
+.u-table-column__vw-89:before {
   width: 89vw; }
 
-.u-table-column-vw-90:before {
+.u-table-column__vw-90:before {
   width: 90vw; }
 
-.u-table-column-vw-91:before {
+.u-table-column__vw-91:before {
   width: 91vw; }
 
-.u-table-column-vw-92:before {
+.u-table-column__vw-92:before {
   width: 92vw; }
 
-.u-table-column-vw-93:before {
+.u-table-column__vw-93:before {
   width: 93vw; }
 
-.u-table-column-vw-94:before {
+.u-table-column__vw-94:before {
   width: 94vw; }
 
-.u-table-column-vw-95:before {
+.u-table-column__vw-95:before {
   width: 95vw; }
 
-.u-table-column-vw-96:before {
+.u-table-column__vw-96:before {
   width: 96vw; }
 
-.u-table-column-vw-97:before {
+.u-table-column__vw-97:before {
   width: 97vw; }
 
-.u-table-column-vw-98:before {
+.u-table-column__vw-98:before {
   width: 98vw; }
 
-.u-table-column-vw-99:before {
+.u-table-column__vw-99:before {
   width: 99vw; }
 
-.u-table-column-vw-100:before {
+.u-table-column__vw-100:before {
   width: 100vw; }
 
 /* {[The file is published on the basis of YetiForce Public License 3.0 that can be found in the following directory: licenses/LicenseEN.txt or yetiforce.com]} */
