Fixed the quick create modal's backdrop

--- a/public_html/layouts/basic/styles/layout/_Base.scss
+++ b/public_html/layouts/basic/styles/layout/_Base.scss
@@ -72,7 +72,7 @@
 		.c-menu__container:hover + .c-header {
 			left: 230px;
 
-			+ .basePanel {
+			~ .basePanel {
 				left: 180px;
 			}
 		}
@@ -98,7 +98,7 @@
 		.c-menu__container.js-expand + .c-header {
 			left: 230px !important;
 
-			+ .basePanel {
+			~ .basePanel {
 				left: 230px !important;
 			}
 		}
