Added icons to the LangList.tpl's buttons and improved spacing

--- a/public_html/layouts/basic/styles/libraries/_Libraries.scss
+++ b/public_html/layouts/basic/styles/libraries/_Libraries.scss
@@ -418,3 +418,11 @@ ul.ui-autocomplete {
 		background: #f8f9fa;
 	}
 }
+
+//-------- font-awesome --------//
+
+.btn-sm {
+	.fa-xs {
+		vertical-align: calculate-rem(1px);
+	}
+}
