--- a/public_html/layouts/basic/modules/Vtiger/browsercompatibility/Browser_compatibility.html
+++ b/public_html/layouts/basic/modules/Vtiger/browsercompatibility/Browser_compatibility.html
@@ -115,14 +115,15 @@
 			<br/>
 			<div id="browserLinks">
 				<a href="http://windows.microsoft.com/en-in/internet-explorer/ie-11-worldwide-languages" target="_blank"
-				   class="browser internet_explorer" title="Interner Explorer 11"></a>
+				   class="browser internet_explorer" title="Interner Explorer 11" rel="noreferrer noopener"></a>
 				<a href="https://www.google.com/intl/en/chrome/browser/" target="_blank" class="browser chrome"
-				   title="Chrome"></a>
+				   title="Chrome" rel="noreferrer noopener"></a>
 				<a href="http://www.mozilla.org/en-US/firefox/new/" target="_blank" class="browser firefox"
-				   title="Firefox"></a>
-				<a href="http://www.opera.com/" target="_blank" class="browser opera" title="Opera"></a>
+				   title="Firefox" rel="noreferrer noopener"></a>
+				<a href="http://www.opera.com/" target="_blank" class="browser opera" title="Opera"
+				   rel="noreferrer noopener"></a>
 				<a href="http://support.apple.com/downloads/#safari" target="_blank" class="browser safari"
-				   title="Safari"></a>
+				   title="Safari" rel="noreferrer noopener"></a>
 			</div>
 			<br/>
 			<div>
