Added thead and translations to DownloadLanguageModal.tpl table

--- a/public_html/layouts/basic/styles/Main.css
+++ b/public_html/layouts/basic/styles/Main.css
@@ -17876,10 +17876,10 @@ input[type="radio"]:checked:before {
   .modal-header,
   .modal-body,
   .modal-footer {
-    padding: 0.5rem !important; }
+    padding: 0.5rem; }
 
   .modal {
-    padding: 0 !important; } }
+    padding: 0; } }
 @media (min-width: 768px) {
   .c-modal-xl {
     max-width: calc(768px - 5vw); }
