--- a/public_html/layouts/basic/styles/layout/_Modal.scss
+++ b/public_html/layouts/basic/styles/layout/_Modal.scss
@@ -55,11 +55,11 @@
 	.modal-header,
 	.modal-body,
 	.modal-footer {
-		padding: 0.5rem !important;
+		padding: 0.5rem;
 	}
 
 	.modal {
-		padding: 0 !important;
+		padding: 0;
 	}
 }
 
