--- a/public_html/layouts/basic/styles/Main.css
+++ b/public_html/layouts/basic/styles/Main.css
@@ -18772,12 +18772,10 @@ input[type="radio"]:checked:before {
 
 .singleComment .commentActions {
   visibility: hidden;
-  transition: 0s visibility; }
-.singleComment:hover .commentActions {
-  visibility: visible;
-  animation: fadeIn 0.3s;
-  animation-delay: 0.3s;
+  transition: 0s visibility;
   transition-delay: 0.3s; }
+.singleComment:hover .commentActions {
+  visibility: visible; }
 
 .commentContainer {
   border-radius: 2px; }
@@ -18852,9 +18850,6 @@ input[type="radio"]:checked:before {
     display: block; }
   .recentComments .commentDetails {
     display: block; }
-
-.commentActions {
-  margin-bottom: 5px; }
 
 .commentActionsContainer a:hover {
   text-decoration: none; }
