Fixed details RWD bug

--- a/public_html/layouts/basic/styles/pages/_Detail.scss
+++ b/public_html/layouts/basic/styles/pages/_Detail.scss
@@ -16,7 +16,9 @@ $progress-dot-size: calc(100% - #{calculate-rem(6px)});
 	}
 
 	.fieldLabel {
-		height: inherit;
+		@include media-breakpoint-up(lg) {
+			height: inherit;
+		}
 	}
 
 	.fieldLabel.medium, .fieldValue.medium {
