--- a/public_html/layouts/basic/styles/Main.css
+++ b/public_html/layouts/basic/styles/Main.css
@@ -17439,7 +17439,8 @@ input[type="radio"]:checked:before {
 .widget_header .breadcrumb {
   background: none;
   flex-wrap: nowrap;
-  align-items: center; }
+  align-items: center;
+  overflow-y: auto; }
 .widget_header .breadcrumb-item {
   white-space: nowrap;
   height: fit-content; }
@@ -17581,6 +17582,12 @@ input[type="radio"]:checked:before {
   height: calc(100% - 50px);
   width: 100%;
   position: relative; }
+  .c-menu__body .ps__rail-y, .c-menu__body .ps__rail-x {
+    background-color: transparent !important; }
+  .c-menu__body .ps__rail-y:hover > .ps__thumb-y {
+    width: 0.5rem; }
+  .c-menu__body .ps__rail-x:hover > .ps__thumb-x {
+    width: 0.5rem; }
 .c-menu__item__icon {
   padding-right: 1.125rem;
   font-size: 1.6em;
@@ -18649,8 +18656,9 @@ input[type="radio"]:checked:before {
   .o-detail__icon.fa {
     display: inline; }
 
-.detailViewTable .fieldLabel {
-  height: inherit; }
+@media (min-width: 992px) {
+  .detailViewTable .fieldLabel {
+    height: inherit; } }
 .detailViewTable .fieldLabel.medium, .detailViewTable .fieldValue.medium {
   padding: 10px;
   min-height: 40px; }
@@ -18951,15 +18959,18 @@ input[type="radio"]:checked:before {
   position: relative; }
 .c-progress__icon {
   color: var(--white);
-  font-size: 0.9375rem; }
-  .c-progress__icon.fa-circle {
-    margin-right: 0.0625rem; }
+  font-size: 1rem; }
+  .c-progress__icon__dot {
+    width: calc(100% - 0.375rem);
+    height: calc(100% - 0.375rem);
+    background: white;
+    border-radius: 50%; }
   .c-progress__icon.fa-check, .c-progress__icon.fa-lock {
-    font-size: 0.6875rem; }
+    font-size: 0.75rem; }
   .c-progress__icon__container {
     z-index: 1;
-    height: 1.3125rem;
-    width: 1.3125rem;
+    height: 1.375rem;
+    width: 1.375rem;
     display: flex;
     background: #ff5722;
     border-radius: 50%;
@@ -18979,7 +18990,7 @@ input[type="radio"]:checked:before {
   .c-progress__item:after, .c-progress__item:before {
     content: '';
     position: absolute;
-    top: 0.5625rem;
+    top: 0.625rem;
     width: 50%;
     background: #ff5722;
     left: 0;
