--- a/public_html/layouts/basic/styles/Main.css
+++ b/public_html/layouts/basic/styles/Main.css
@@ -17784,7 +17784,7 @@ ul.tweets li {
     font-size: 1.25rem; }
 
 .c-icon--tripple {
-  width: 1.25rem;
+  width: 2.5rem;
   display: inline-block;
   font-size: .75em; }
   .c-icon--tripple__left, .c-icon--tripple__right, .c-icon--tripple__top {
@@ -18657,88 +18657,91 @@ input[type="radio"]:checked:before {
 @media (max-width: 767.98px) {
   .c-menu__container {
     bottom: 1rem; } }
-.c-menu__item a {
-  display: inline-flex;
-  width: 100%;
-  border-radius: 0;
-  vertical-align: text-top;
-  padding: 0.5rem 1.875rem 0.5rem 3.4375rem;
-  word-wrap: break-word;
-  font-size: 0.9375rem;
-  line-height: 1.2;
-  background: #4a5364;
-  position: relative; }
-  .c-menu__item a:hover, .c-menu__item a:focus {
-    background: #555f73; }
-  .c-menu__item a.active {
-    background: #343b47; }
-  .c-menu__item a.hasIcon {
-    padding: 0.5rem 1.875rem 0.5rem 0.75rem; }
-  .c-menu__item a .c-menu__item__text {
-    padding: 0.125rem 0;
-    position: relative;
+.c-menu__item {
+  width: -webkit-fill-available;
+  width: -moz-available; }
+  .c-menu__item a {
+    display: inline-flex;
+    width: 100%;
+    border-radius: 0;
+    vertical-align: text-top;
+    padding: 0.5rem 1.875rem 0.5rem 3.4375rem;
     word-wrap: break-word;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    text-rendering: optimizeLegibility; }
-  .c-menu__item a.hasIcon img {
-    height: 1.25rem; }
-  .c-menu__item a .fa, .c-menu__item a.hasIcon img {
-    margin-right: 0.75rem;
-    font-size: 1.25rem;
-    padding-right: 0.4375rem;
-    padding-left: 0.1875rem; }
-  .c-menu__item a .fa {
-    position: relative;
-    top: 0.125rem; }
-  .c-menu__item a .toggler {
-    position: absolute;
-    right: 12px;
-    font-size: 0.625rem;
-    line-height: 24px; }
-  .c-menu__item a.collapsed .fa-minus-circle {
-    display: none; }
-  .c-menu__item a:not(.collapsed) .fa-plus-circle {
-    display: none; }
-  .c-menu__item a:not(.is-submenu-toggler) {
-    padding-right: .8rem !important; }
-.c-menu__item .tpl-menu-SubMenu,
-.c-menu__item .tpl-menu-Profile_submenu {
-  background: #202c40;
-  color: #fff; }
-  .c-menu__item .tpl-menu-SubMenu a,
-  .c-menu__item .tpl-menu-Profile_submenu a {
-    font-size: 0.875rem;
-    color: #fff;
+    font-size: 0.9375rem;
+    line-height: 1.2;
+    background: #4a5364;
+    position: relative; }
+    .c-menu__item a:hover, .c-menu__item a:focus {
+      background: #555f73; }
+    .c-menu__item a.active {
+      background: #343b47; }
+    .c-menu__item a.hasIcon {
+      padding: 0.5rem 1.875rem 0.5rem 0.75rem; }
+    .c-menu__item a .c-menu__item__text {
+      padding: 0.125rem 0;
+      position: relative;
+      word-wrap: break-word;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      text-rendering: optimizeLegibility; }
+    .c-menu__item a.hasIcon img {
+      height: 1.25rem; }
+    .c-menu__item a .fa, .c-menu__item a.hasIcon img {
+      margin-right: 0.75rem;
+      font-size: 1.25rem;
+      padding-right: 0.4375rem;
+      padding-left: 0.1875rem; }
+    .c-menu__item a .fa {
+      position: relative;
+      top: 0.125rem; }
+    .c-menu__item a .toggler {
+      position: absolute;
+      right: 12px;
+      font-size: 0.625rem;
+      line-height: 24px; }
+    .c-menu__item a.collapsed .fa-minus-circle {
+      display: none; }
+    .c-menu__item a:not(.collapsed) .fa-plus-circle {
+      display: none; }
+    .c-menu__item a:not(.is-submenu-toggler) {
+      padding-right: .8rem !important; }
+  .c-menu__item .tpl-menu-SubMenu,
+  .c-menu__item .tpl-menu-Profile_submenu {
     background: #202c40;
-    padding: 0.375rem 1.875rem 0.375rem 0.8rem; }
-    .c-menu__item .tpl-menu-SubMenu a:hover, .c-menu__item .tpl-menu-SubMenu a:focus,
-    .c-menu__item .tpl-menu-Profile_submenu a:hover,
-    .c-menu__item .tpl-menu-Profile_submenu a:focus {
-      background: #293851; }
-    .c-menu__item .tpl-menu-SubMenu a.active,
-    .c-menu__item .tpl-menu-Profile_submenu a.active {
-      background: #18202f; }
-  .c-menu__item .tpl-menu-SubMenu .menuLabel > a,
-  .c-menu__item .tpl-menu-Profile_submenu .menuLabel > a {
-    font-weight: 600;
-    text-transform: uppercase;
-    padding: 0.375rem 0.75rem; }
-  .c-menu__item .tpl-menu-SubMenu button,
-  .c-menu__item .tpl-menu-Profile_submenu button {
-    background: #0f151e;
-    color: #f8f9fa;
-    overflow: hidden;
-    text-overflow: ellipsis; }
-    .c-menu__item .tpl-menu-SubMenu button:hover, .c-menu__item .tpl-menu-SubMenu button:focus,
-    .c-menu__item .tpl-menu-Profile_submenu button:hover,
-    .c-menu__item .tpl-menu-Profile_submenu button:focus {
-      color: #202c40;
-      background: #fff; }
-    .c-menu__item .tpl-menu-SubMenu button.hasIcon,
-    .c-menu__item .tpl-menu-Profile_submenu button.hasIcon {
+    color: #fff; }
+    .c-menu__item .tpl-menu-SubMenu a,
+    .c-menu__item .tpl-menu-Profile_submenu a {
+      font-size: 0.875rem;
+      color: #fff;
+      background: #202c40;
+      padding: 0.375rem 1.875rem 0.375rem 0.8rem; }
+      .c-menu__item .tpl-menu-SubMenu a:hover, .c-menu__item .tpl-menu-SubMenu a:focus,
+      .c-menu__item .tpl-menu-Profile_submenu a:hover,
+      .c-menu__item .tpl-menu-Profile_submenu a:focus {
+        background: #293851; }
+      .c-menu__item .tpl-menu-SubMenu a.active,
+      .c-menu__item .tpl-menu-Profile_submenu a.active {
+        background: #18202f; }
+    .c-menu__item .tpl-menu-SubMenu .menuLabel > a,
+    .c-menu__item .tpl-menu-Profile_submenu .menuLabel > a {
+      font-weight: 600;
+      text-transform: uppercase;
       padding: 0.375rem 0.75rem; }
+    .c-menu__item .tpl-menu-SubMenu button,
+    .c-menu__item .tpl-menu-Profile_submenu button {
+      background: #0f151e;
+      color: #f8f9fa;
+      overflow: hidden;
+      text-overflow: ellipsis; }
+      .c-menu__item .tpl-menu-SubMenu button:hover, .c-menu__item .tpl-menu-SubMenu button:focus,
+      .c-menu__item .tpl-menu-Profile_submenu button:hover,
+      .c-menu__item .tpl-menu-Profile_submenu button:focus {
+        color: #202c40;
+        background: #fff; }
+      .c-menu__item .tpl-menu-SubMenu button.hasIcon,
+      .c-menu__item .tpl-menu-Profile_submenu button.hasIcon {
+        padding: 0.375rem 0.75rem; }
 .c-menu__body {
   height: calc(100% - 50px);
   width: 100%;
