--- a/public_html/layouts/basic/styles/components/_Global.scss
+++ b/public_html/layouts/basic/styles/components/_Global.scss
@@ -131,6 +131,7 @@
 .c-btn-collapsible {
 	overflow: hidden;
 	max-width: calculate-rem(40px);
+	white-space: nowrap;
 	@include u-transition(all 275ms ease);
 
 	&.btn-xs {
