--- a/public_html/layouts/basic/styles/components/_Global.scss
+++ b/public_html/layouts/basic/styles/components/_Global.scss
@@ -130,6 +130,7 @@
 
 .c-btn-collapsible {
 	overflow: hidden;
+	white-space: nowrap;
 	max-width: calculate-rem(40px);
 	white-space: nowrap;
 	@include u-transition(all 275ms ease);
