--- a/public_html/layouts/basic/styles/Main.css
+++ b/public_html/layouts/basic/styles/Main.css
@@ -13124,6 +13124,11 @@ a.text-dark:hover, a.text-dark:focus {
   .flag-icon-un.flag-icon-squared {
     background-image: url(../../../libraries/flag-icon-css/flags//1x1/un.svg); }
 
+.flag-icon-xk {
+  background-image: url(../../../libraries/flag-icon-css/flags//4x3/xk.svg); }
+  .flag-icon-xk.flag-icon-squared {
+    background-image: url(../../../libraries/flag-icon-css/flags//1x1/xk.svg); }
+
 /* {[The file is published on the basis of YetiForce Public License 3.0 that can be found in the following directory: licenses/LicenseEN.txt or yetiforce.com]} */
 .select2-selection {
   padding-top: 0.2rem; }
@@ -15939,8 +15944,8 @@ select.form-control {
 .blockContent .inviteesContent {
   padding: 10px; }
 .blockContent .inviteRow {
-  width: 500px;
-  margin-bottom: 2px; }
+  width: 220px;
+  margin-bottom: 3px; }
 
 .dashboardViewContainer .dashboardHeading {
   position: absolute;
