Added notify for login errors

--- a/src/css/quasar.variables.styl
+++ b/src/css/quasar.variables.styl
@@ -14,6 +14,6 @@ $secondary = #26A69A
 $accent    = #9C27B0
 
 $positive  = #21BA45
-$negative  = #C10015
+$negative  = $red
 $info      = #31CCEC
 $warning   = #F2C037
