--- a/public_html/src/css/app.variables.styl
+++ b/public_html/src/css/app.variables.styl
@@ -1,10 +1,6 @@
 /* {[The file is published on the basis of YetiForce Public License 3.0 that can be found in the following directory: licenses/LicenseEN.txt or yetiforce.com]} */
+// import quasar variables with overrides
+@import './quasar.variables'
+@import '../../node_modules/quasar/src/css/variables'
 
-$primary   = #9C27B0
-$secondary = #26A69A
-$accent    = #9C27B0
-
-$positive  = #21BA45
-$negative  = $red
-$info      = #31CCEC
-$warning   = #F2C037
+//yf variables ...
