--- a/public_html/src/css/quasar.variables.styl
+++ b/public_html/src/css/quasar.variables.styl
@@ -1,10 +1,11 @@
 /* {[The file is published on the basis of YetiForce Public License 3.0 that can be found in the following directory: licenses/LicenseEN.txt or yetiforce.com]} */
+/*
+$primary   = #2980B9
+$secondary = #1ABC9C
+$accent    = #9B59B6
 
-$primary   = #9C27B0
-$secondary = #26A69A
-$accent    = #9C27B0
-
-$positive  = #21BA45
-$negative  = $red
-$info      = #31CCEC
-$warning   = #F2C037
+$positive  = #0EAC51
+$negative  = #E74C3C
+$info      = #29C5FF
+$warning   = #F39C12
+*/
